--- a/metadata.yaml
+++ b/metadata.yaml
@@ -10,6 +10,9 @@ contributor:
     deathdate: 1906
     gutenberg_agent_id: '26350'
     url: http://www.gutenberg.org/2009/agents/26350
+covers:
+- cover_type: archival
+  image_path: 71728-h/images/cover.jpg
 creator:
   author:
     agent_name: Stratemeyer, Edward
@@ -26,6 +29,8 @@ creator:
     - https://en.wikipedia.org/wiki/Edward_Stratemeyer
     - https://www.gutenberg.org/ebooks/author/55530
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/71728#Under-the-Mikado-s-flag-b-Young-soldiers-of-fortune
 gutenberg_issued: '2023-09-25'
 identifiers:
   gutenberg: '71728'
